--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,10 @@
   <title>게시판 홈</title>
   <link rel="stylesheet" type="text/css" href="/static/styles/commonStyle.css">
   <link rel="stylesheet" type="text/css" href="/static/styles/index.css">
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+        crossorigin="anonymous">
 </head>
 <body>
 <header>
@@ -17,10 +21,10 @@
   <table>
     <thead>
     <tr>
-      <td>제목</td>
-      <td>작성자</td>
-      <td>조회수</td>
-      <td>작성일</td>
+      <th>제목</th>
+      <th>작성자</th>
+      <th>조회수</th>
+      <th>작성일</th>
     </tr>
     </thead>
     <tbody>
@@ -33,7 +37,9 @@
     </tbody>
   </table>
 </section>
-
 <script type="module" src="/static/js/index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </body>
 </html>
