--- a/src/main/resources/templates/admin/managePosts.html
+++ b/src/main/resources/templates/admin/managePosts.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>작성글 목록</title>
+  <title>게시글 목록</title>
   <link rel="stylesheet" href="">
 </head>
 <body>
@@ -11,10 +11,9 @@
   <p th:text="${user.nickname}">닉네임 표시</p>
 </header>
 <nav>
-  <a href="/user/modify">회원정보 수정</a>
+  <a href="/admin/users">회원 관리</a>
 </nav>
 <section>
-  <h3 th:text="${user.nickname}님의 작성글">작성글 목록</h3>
   <table>
     <thead>
     <tr>
@@ -22,13 +21,16 @@
       <th>작성자</th>
       <th>조회수</th>
       <th>작성일</th>
+      <th>게시글 삭제</th>
     </tr>
     </thead>
     <tbody>
     <tr th:each="post: ${posts}">
       <td><a th:href="@{|/post/${post.id}|}"></a></td>
+      <td th:text="${post.writer}"></td>
       <td th:text="${post.views}"></td>
-      <td th:text="*{#temporals.format(post.postCreatedTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
+      <td th:text="*{#temporals.format(post.createdTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
+      <a th:href="@{|/post/delete/${post.id}|}">삭제</a>
     </tr>
     </tbody>
   </table>
