--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>게시판 홈</title>
+  <title>홈</title>
   <link rel="stylesheet" type="text/css" href="/static/styles/commonStyle.css">
   <link rel="stylesheet" type="text/css" href="/static/styles/index.css">
   <link rel="stylesheet"
