--- a/src/main/resources/templates/user/joinForm.html
+++ b/src/main/resources/templates/user/joinForm.html
@@ -13,7 +13,7 @@
 <body>
 <section>
   <h2>회원가입</h2>
-  <form id="joinForm" action="/board/join" method="post">
+  <form id="joinForm" action="/user/join" method="post">
     <label>아이디 </label>
     <input type="text" name="username"> <br>
     <label>닉네임 </label>
@@ -21,7 +21,7 @@
     <!-- TODO: 개발 완료/배포 직전에 type="password"로 변경하기-->
     <label>비밀번호 </label>
     <input type="text" name="password"> <br>
-    <button type="submit">회원가입</button>
+    <input type="submit" value="회원가입"></input>
   </form>
 </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
