--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -19,8 +19,8 @@
     <!-- TODO: 개발 완료/배포 직전에 type="password"로 변경하기-->
     <label>비밀번호 </label>
     <input type="text" name="password"> <br>
-    <button type="submit" class="btn btn-primary">로그인</button>
-    <button type="button" class="btn btn-primary">회원가입</button>
+    <input type="submit" class="btn btn-primary" value="로그인"></input>
+    <input type="button" value="회원가입">
   </form>
 </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
