--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -17,7 +17,7 @@
   <h3>회원정보 수정</h3>
   <form action="/user/modify" method="post">
     <label>닉네임</label>
-    <input type="text" th:text="${user.nickname}">
+    <input type="text" th:text="${user.nickname}" name="nickname">
     <button type="submit">변경</button> <br>
     <!-- TODO: 개발 완료/배포 직전에 type="password"로 변경하기-->
     <label>비밀번호 </label>
