--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -15,7 +15,7 @@
 </nav>
 <section>
   <h3>회원정보 수정</h3>
-  <form action="/user/modify" method="post">
+  <form action="/user/update" method="post">
     <label>닉네임</label>
     <input type="text" th:text="${user.nickname}" name="nickname">
     <button type="submit">변경</button> <br>
