통합 테스트를 위한 HTML 문서 사용자 정보 주석 처리

--- a/src/main/resources/templates/board/postWrite.html
+++ b/src/main/resources/templates/board/postWrite.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-  <p th:text="${user.nickname}">닉네임 표시</p>
+<!--  <p th:text="${user.nickname}">닉네임 표시</p>-->
 </header>
 <section>
   <form action="/post/write" method="post" name="postWrite">
