--- a/src/main/resources/templates/user/userCreatedPosts.html
+++ b/src/main/resources/templates/user/userCreatedPosts.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-  <p th:text="${user.nickname}">닉네임 표시</p>
+<!--  <p th:text="${user.nickname}">닉네임 표시</p>-->
 </header>
 <nav>
   <a href="/user/modify">회원정보 수정</a>
