--- a/src/main/resources/templates/board/postEdit.html
+++ b/src/main/resources/templates/board/postEdit.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-  <p th:text="${user.nickname}">닉네임 표시</p>
+<!--  <p th:text="${user.nickname}">닉네임 표시</p>-->
 </header>
 <section>
   <form action="/post/modify" method="post" name="postModifyForm">
