--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-  <p th:text="${user.nickname}">닉네임 표시</p>
+<!--  <p th:text="${user.nickname}">닉네임 표시</p>-->
 </header>
 <nav>
   <a href="/user/posts">작성글 목록</a>
