--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,9 @@
     <p th:text="${user.nickname}">닉네임 표시</p>
   </span>
   -->
-  <button id="loginButton" class="button">로그인</button>
+  <form action="/user/login" method="get">
+    <input id="loginButton" class="button" type="submit">로그인</input>
+  </form>
 </header>
 <section>
   <table>
