--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -20,7 +20,9 @@
     <label>비밀번호 </label>
     <input type="text" name="password"> <br>
     <input type="submit" class="btn btn-primary" value="로그인"></input>
-    <input type="button" value="회원가입">
+  </form>
+  <form action="/user/join" method="get">
+    <input type="submit" value="회원가입">
   </form>
 </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
