--- a/src/main/resources/templates/board/postEdit.html
+++ b/src/main/resources/templates/board/postEdit.html
@@ -12,12 +12,12 @@
 <!--  <p th:text="${user.nickname}">닉네임 표시</p>-->
 </header>
 <section>
-  <form action="/post/modify" method="post" name="postModifyForm">
-    <input type="text" name="boardTitle" placeholder="제목" th:value="${editedPost.title}"> <br>
+  <form action="/post/edit" method="post" name="postEditForm">
+    <input type="text" name="boardTitle" placeholder="제목" th:value="${post.title}"> <br>
     <!-- TinyMCE 초기화 지점 추가 -->
     <!-- TODO: 위지윅 에디터 변경 -->
     <textarea id="tiny" name="postContents"
-              th:text="${editedPost.contents}">여기에 내용을 입력해주세요.</textarea>
+              th:text="${post.contents}">여기에 내용을 입력해주세요.</textarea>
     <input type="submit" value="수정">
   </form>
 </section>
