--- a/src/main/resources/templates/user/userCreatedPosts.html
+++ b/src/main/resources/templates/user/userCreatedPosts.html
@@ -8,7 +8,17 @@
 </head>
 <body>
 <header>
-<!--  <p th:text="${user.nickname}">닉네임 표시</p>-->
+  <div th:if="${user != null}">
+    <p th:text="${user.nickname}">닉네임 표시</p>
+    <form action="/user/logout" method="get">
+      <button id="logoutButton" class="button" type="submit">로그아웃</button>
+    </form>
+  </div>
+  <div th:unless="${user != null}">
+    <form action="/user/login" method="get">
+      <input id="loginButton" class="button" type="submit">로그인</input>
+    </form>
+  </div>
 </header>
 <nav>
   <a href="/user/modify">회원정보 수정</a>
