--- a/src/main/resources/templates/board/postView.html
+++ b/src/main/resources/templates/board/postView.html
@@ -9,12 +9,18 @@
 </head>
 <body>
 <header>
-<!--  <span th:if="${user.loginState == 1}">-->
-<!--    <p th:text="${user.nickname}">닉네임 표시</p>-->
-<!--  </span>-->
-  <form action="/user/login" method="get">
-    <input id="loginButton" class="button" type="submit">로그인</input>
-  </form></header>
+  <div th:if="${user != null}">
+    <p th:text="${user.nickname}">닉네임 표시</p>
+    <form action="/user/logout" method="get">
+      <button id="logoutButton" class="button" type="submit">로그아웃</button>
+    </form>
+  </div>
+  <div th:unless="${user != null}">
+    <form action="/user/login" method="get">
+      <input id="loginButton" class="button" type="submit">로그인</input>
+    </form>
+  </div>
+</header>
 <section>
   <table>
     <thead>
