--- a/src/main/resources/templates/board/postEdit.html
+++ b/src/main/resources/templates/board/postEdit.html
@@ -23,22 +23,10 @@
 </header>
 <section>
   <form action="/post/edit" method="post" name="postEditForm">
-    <input type="text" name="boardTitle" placeholder="제목" th:value="${post.title}"> <br>
-    <!-- TinyMCE 초기화 지점 추가 -->
-    <!-- TODO: 위지윅 에디터 변경 -->
-    <textarea id="tiny" name="postContents"
-              th:text="${post.contents}">여기에 내용을 입력해주세요.</textarea>
+    <input type="text" name="postTitle" placeholder="제목" th:value="${post.title}"> <br>
+    <textarea name="postContents" th:text="${post.contents}">여기에 내용을 입력해주세요.</textarea>
     <input type="submit" value="수정">
   </form>
 </section>
-<!-- 위지윅 에디터 추가 -->
-<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js"
-        referrerpolicy="origin"></script>
-<!-- TinyMCE init 스크립트 추가 -->
-<script>
-  tinymce.init({
-    selector: 'textarea#tiny'
-  });
-</script>
 </body>
 </html>
