--- a/src/main/resources/templates/board/postWrite.html
+++ b/src/main/resources/templates/board/postWrite.html
@@ -23,21 +23,11 @@
 </header>
 <section>
   <form action="/post/write" method="post" name="postWrite">
-    <input type="text" name="boardTitle" placeholder="제목"> <br>
-    <!-- TinyMCE 초기화 지점 추가 -->
-    <!-- TODO: 위지윅 에디터 변경 -->
-    <textarea id="tiny" name="contents">여기에 내용을 입력해주세요.</textarea>
+    <input type="text" name="postTitle" placeholder="제목"> <br>
+    <textarea name="postContents">여기에 내용을 입력해주세요.</textarea>
     <input type="submit" value="작성">
   </form>
 </section>
-<!-- 위지윅 에디터 추가 -->
-<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js"
-        referrerpolicy="origin"></script>
-<!-- TinyMCE init 스크립트 추가 -->
-<script>
-  tinymce.init({
-    selector: 'textarea#tiny'
-  });
-</script>
+<script></script>
 </body>
 </html>
