--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>홈</title>
-  <link rel="stylesheet" type="text/css" href="/static/styles/commonStyle.css">
-  <link rel="stylesheet" type="text/css" href="/static/styles/index.css">
+  <link rel="stylesheet" href="static/styles/commonStyle.css">
+  <link rel="stylesheet" href="static/styles/index.css">
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -18,7 +18,7 @@
       <button id="logoutButton" class="button" type="submit" value="로그아웃"></button>
     </form>
   </div>
-  <div th:unless="${user != null}">
+  <div th:if="${user == null}">
     <form action="/user/login" method="get">
       <input id="loginButton" class="button" type="submit" value="로그인"></input>
     </form>
@@ -45,7 +45,7 @@
     </tbody>
   </table>
 </section>
-<script type="module" src="/static/js/index.js"></script>
+<script src="/static/js/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
