글쓰기 버튼 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,12 @@
     </form>
   </div>
 </header>
-<section>
+<section id="postWriteButtonSection">
+  <form action="/post/write" method="get">
+    <button id="postWriteButton" type="submit" value="글 쓰기"></button>
+  </form>
+</section>
+<section id="boardSection">
   <!-- TODO: 페이징 처리 구현하기 -->
   <table>
     <thead>
