--- a/src/main/resources/templates/board/postEdit.html
+++ b/src/main/resources/templates/board/postEdit.html
@@ -17,7 +17,7 @@
   </div>
   <div th:unless="${user != null}">
     <form action="/user/login" method="get">
-      <input id="loginButton" class="button" type="submit" value="로그인"></input>
+      <button id="loginButton" class="button" type="submit" value="로그인"></button>
     </form>
   </div>
 </header>
