--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
   </div>
   <div th:if="${user == null}">
     <form action="/user/login" method="get">
-      <input id="loginButton" class="button" type="submit" value="로그인"></input>
+      <button id="loginButton" class="button" type="submit" value="로그인"></button>
     </form>
   </div>
 </header>
