--- a/src/main/resources/templates/admin/managePosts.html
+++ b/src/main/resources/templates/admin/managePosts.html
@@ -10,6 +10,9 @@
 <header>
   <div th:if="${user != null}">
     <p th:text="${user.nickname}">닉네임 표시</p>
+    <form action="/" method="get">
+      <button id="moveHomePageButton" type="submit" value="홈으로"></button>
+    </form>
     <form action="/user/logout" method="get">
       <button id="logoutButton" class="button" type="submit" value="로그아웃"></button>
     </form>
@@ -21,7 +24,9 @@
   </div>
 </header>
 <nav>
-  <a href="/admin/users">회원 관리</a>
+  <form action="admin/users" method="get">
+    <button id="moveManageUserPageButton" type="submit" value="회원 관리"></button>
+  </form>
 </nav>
 <section>
   <table>
