--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,22 +16,22 @@
     <p th:text="${user.nickname}">닉네임 표시</p>
     <span th:if="${user.userType == 1}">
       <form action="/admin/users" method="get">
-        <button id="moveManagePageButton" type="submit" value="관리자 페이지"></button>
+        <button id="moveManagePageButton" type="submit" value="관리자 페이지">관리자 페이지</button>
       </form>
     </span>
     <form action="/user/logout" method="get">
-      <button id="logoutButton" class="button" type="submit" value="로그아웃"></button>
+      <button id="logoutButton" class="button" type="submit" value="로그아웃">로그아웃</button>
     </form>
   </div>
   <div th:if="${user == null}">
     <form action="/user/login" method="get">
-      <button id="loginButton" class="button" type="submit" value="로그인"></button>
+      <button id="loginButton" class="button" type="submit" value="로그인">로그인</button>
     </form>
   </div>
 </header>
 <section id="postWriteButtonSection">
   <form action="/post/write" method="get">
-    <button id="postWriteButton" type="submit" value="글 쓰기"></button>
+    <button id="postWriteButton" type="submit" value="글 쓰기">글 쓰기</button>
   </form>
 </section>
 <section id="boardSection">
