--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,6 +19,11 @@
         <button id="moveManagePageButton" type="submit" value="관리자 페이지">관리자 페이지</button>
       </form>
     </span>
+    <span th:if="${user.userType == 0}">
+      <form action="/user/update" method="get">
+        <button id="moveUserUpdatePageButton" type="submit" value="사용자 정보 페이지">사용자 정보 페이지</button>
+      </form>
+    </span>
     <form action="/user/logout" method="get">
       <button id="logoutButton" class="button" type="submit" value="로그아웃">로그아웃</button>
     </form>
